syntax = "proto3";
package ncs.game.a2s.v1;
option go_package = "backend/app/game/a2s/api/grpc/v1";

// 规范
// 1. 包名必须遵守服务文件路径名
// 2. 请求回复信息必须遵守格式

// HTTP协议(grpc gateway)
//import "google/api/annotations.proto";

message A2SInfo {
	int32 protocol = 1;
	string map = 2;
	string folder = 3;
	string game = 4;
	int32 id = 5;
	int32 players = 6;
	int32 max_players = 7;
	int32 bots = 8;
	int32 server_type = 9;
	int32 environment = 10;
	int32 visibility = 11;
	int32 vac = 12;
	string version = 13;

	int32 port = 14;
	int64 steam_id = 15;

	int32 source_tv_port = 16;
	string source_tv_name = 17;

	string keywords = 18;
	int64 game_id = 19;
	string hostname = 20;
}

message A2SPlayer {
	string name = 1;
	int32 score = 2;
	float duration = 3;
}

message ServerInfo {
	string address = 1;
	A2SInfo info = 2;
	repeated A2SPlayer player = 3;
}

message A2SQueryReq {
	repeated string address = 1;
}

message A2SQueryResp {
	repeated ServerInfo servers = 1;
}

service A2S {
	rpc A2SQuery (A2SQueryReq) returns (A2SQueryResp);
}